# internal/event/types.go
@@ -13,3 +13,27 @@ type DiskInfo struct {
 type DiskListResponse struct {
 	Disks []DiskInfo `json:"disks"`
 }
+
+type FilesystemListRequest struct{}
+
+type FilesystemInfo struct {
+	UUID        string   `json:"uuid"`
+	Label       *string  `json:"label"`
+	Size        uint64   `json:"size"`
+	Devices     []string `json:"devices"`
+	RaidProfile string   `json:"raid_profile"`
+}
+
+type FilesystemListResponse struct {
+	Filesystems []FilesystemInfo `json:"filesystems"`
+}
+
+type CreateFilesystemRequest struct {
+	Devices     []string `json:"devices"`
+	Label       *string  `json:"label"`
+	RaidProfile string   `json:"raid_profile"`
+}
+
+type CreateFilesystemResponse struct {
+	Filesystem FilesystemInfo `json:"filesystem"`
+}
